--- a/css/styles.css
+++ b/css/styles.css
@@ -1,114 +1,117 @@
-<style>
+/* === Pure JS Slider Styles === */
 
-  .wrapper {
-    width: 100%;
-  }
-  #container {
-    height: 450px;
-    max-width: 1080px;
-    width: 100%;
-    margin: 0 auto;
-    position: relative;
-  }
+.wrapper {
+  width: 100%;
+}
+#carousel{
+  height: 450px;
+  max-width: 1080px;
+  width: 100%;
+  margin: 0 auto;
+  /*position: relative;*/
+}
 
-  .slide_1 {
-    background: url('../images/carousel1.jpg') no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 450px;
-    /*transform: translateX(0);*/
-    transition: all .5s ease-out;
-  }
-  .slide_2 {
-    background: url('../images/carousel2.jpg') no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 450px;
-    /*transform: translateX(0);*/
-    transition: all .5s ease-out;
-  }
-  .slide_3 {
-    background: url('../images/carousel3.jpg') no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 450px;
-    /*transform: translateX(0);*/
-    transition: all .5s ease-out;
-  }
+#slide_1 {
+  background-size: contain;
+  background-position: center;
+  height: 450px;
+  transition: all .5s ease-out;
+}
 
-  #left_holder {
-    height: 450px;
-    width: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  #right_holder {
-    height: 450px;
-    width: 100px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    color: #fff;
-    cursor: pointer;
-  }
+#slide_2 {
+  background: url('../images/carousel2.jpg') no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 450px;
+  transition: all .5s ease-out;
+}
+#slide_3 {
+  background: url('../images/carousel3.jpg') no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 450px;
+  transition: all .5s ease-out;
+}
 
-  .left {
-    height: 50px;
-    width: 50px;
-    position: absolute;
-    top: 40%;
-    left: 0;
-  }
-
-  .right {
-    height: 50px;
-    width: 50px;
-    position: absolute;
-    top: 40%;
-    right: 0;
-  }
-
-  .navigation {
-    width: 300px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 2em 0 0 0;
-  }
-  .navigation a {
-    text-decoration: none;
-    color: #fff;
-    padding: 1em;
-    background: #666;
-  }
-  .navigation a.active {
-    background: #999;
-  }
-
-  #slide_1__text,
-  #slide_2__text,
-  #slide_3__text {
-    color: #000;
-    background: #ccc;
-    width: 400px;
-    height: 400px;
-    opacity: 0;
-    /*position: absolute;*/
-    visibility: hidden;
-    /*top: -99999px;*/
-    z-index: -999;
-    transition: opacity .5s ease-out;
-  }
-  .show {
-    opacity: 1 !important;
-    top: 0;
-    transition: opacity .5s ease-out;
-    visibility: visible !important;
-    z-index: 100 !important;
-  }
+.display {
+  display: block !important;
+}
+.hide {
+  display: none;
+}
 
 
-</style>
+
+#left_holder {
+  height: 450px;
+  width: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #fff;
+  cursor: pointer;
+}
+
+#right_holder {
+  height: 450px;
+  width: 100px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #fff;
+  cursor: pointer;
+}
+
+.left {
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 40%;
+  left: 0;
+}
+
+.right {
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 40%;
+  right: 0;
+}
+
+.navigation {
+  width: 300px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 2em 0 0 0;
+}
+.navigation a {
+  text-decoration: none;
+  color: #fff;
+  padding: 1em;
+  background: #666;
+}
+.navigation a.active {
+  background: #999;
+}
+
+#slide_1__text,
+#slide_2__text,
+#slide_3__text {
+  color: #000;
+  background: #ccc;
+  width: 400px;
+  height: 400px;
+  opacity: 0;
+  /*position: absolute;*/
+  visibility: hidden;
+  /*top: -99999px;*/
+  z-index: -999;
+  transition: opacity .5s ease-out;
+}
+/*.show {
+  opacity: 1 !important;
+  top: 0;
+  transition: opacity .5s ease-out;
+  visibility: visible !important;
+  z-index: 100 !important;
+}*/
